<resources>
    <string name="app_name">myPet</string>

    <string name="field_required">Το πεδίο είναι υποχρεωτικό</string>
    <string name="username_not_valid_error">Το όνομα χρήστη δεν είναι έγκυρο</string>
    <string name="email_not_valid_error">Το e-mail δεν είναι έγκυρο</string>
    <string name="phone_number_not_valid_error">Ο αριθμός τηλεφώνου δεν είναι έγκυρος</string>
    <string name="password_length_error">Ο κωδικός πρέπει να είναι τουλάχιστον 8 χαρακτήρες</string>
    <string name="password_not_match_error">Οι κωδικοί δεν ταιριάζουν</string>

    <string name="title_petprofile">Στοιχεία</string>
    <string name="title_vaccinations">Εμβολιασμοί</string>
    <string name="title_vermifugations">Θεραπείες</string>
    <string name="title_treatments">Άλλες Θεραπείες</string>
    <string name="title_surgeries">Επεμβάσεις</string>
    <string name="title_diagnosticTests">Διαγνωστικά</string>
    <string name="title_more">Περισσσότερα</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="empty" translatable="false" />

    <string name="error_no_internet">No Internet connection</string>
    <string name="error_generic">Something went wrong</string>
    <string name="error_no_gps">Location services are not enabled</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_settings">Settings</string>

    <string name="error_foreground_location_permissions">The app needs to know your location to help you discover the places</string>
    <string name="error_background_location_permission_message">If you wish to center on your location , go to Settings -> Permissions -> Location -> Allow All The Time</string>


    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="select_point">Επιλογή</string>
</resources>