<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_petprofile"
        android:title="@string/title_petprofile"
        android:id="@+id/navigation_menu_pet_profile"/>
    <item
        android:icon="@drawable/ic_vaccination"
        android:title="@string/title_vaccinations"
        android:id="@+id/navigation_menu_vaccinations"/>
    <item
        android:icon="@drawable/ic_vermifugation"
        android:title="@string/title_vermifugations"
        android:id="@+id/navigation_menu_vermifugations"/>
    <item
        android:icon="@drawable/ic_baseline_more_horiz"
        android:title="@string/title_more"
        android:id="@+id/navigation_menu_more"/>
<!--    <item-->
<!--        android:icon="@drawable/ic_surgery"-->
<!--        android:title="@string/title_surgeries"-->
<!--        android:id="@+id/navigation_menu_surgeries"/>-->
<!--    <item-->
<!--        android:icon="@drawable/ic_diagnostic_test"-->
<!--        android:title="@string/title_diagnosticTests"-->
<!--        android:id="@+id/navigation_menu_diagnostic_tests"/>-->
</menu>