<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_16dp"
            android:layout_marginTop="@dimen/margin_double_half_24dp"
            android:layout_marginEnd="@dimen/margin_default_16dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium_18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:contentDescription="@string/empty"
            android:src="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_pos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_white"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium_18sp"
                tools:text="@string/dialog_action_ok" />

            <ImageView
                android:id="@+id/dialog_options_separator"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/empty"
                android:src="@color/black"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_neg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_white"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium_18sp"
                android:visibility="gone"
                tools:text="@string/dialog_action_cancel" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>